# Resume-AI-Openenv

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: llm_agent.py  resume_env.py  utils.py
server/: app.py
tasks/: easy.json  hard.json  medium.json
